--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ p.signed {
 }
 
 #card-front {
-  background-color: #ee9ca7;
+  background-color: #b9acf7;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#FF5555), to(#FF7777));
   background-image: linear-gradient(top, #FF5555 0%, #FF7777 100%);
   -webkit-transform-origin: left;
